[gd_scene load_steps=5 format=2]

[ext_resource path="res://QuizQuestion.gd" type="Script" id=1]
[ext_resource path="res://res/Wood15.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/MainMenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=4]

[node name="QuizQuestionRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 383.755, 561.006 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelLessonTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 3 )
text = "<question>
"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 720.0
margin_bottom = 127.0

[node name="LabelQuestion" type="Label" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 720.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 3 )
text = "<question>
"

[node name="ScrollContainerAnswers" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 720.0
margin_bottom = 954.0
rect_min_size = Vector2( 550, 700 )

[node name="VBoxContainerAnswers" type="VBoxContainer" parent="VBoxContainer/ScrollContainerAnswers"]

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 958.0
margin_right = 720.0
margin_bottom = 1034.0
alignment = 1

[node name="ButtonCheck" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
margin_left = 160.0
margin_right = 560.0
margin_bottom = 76.4549
text_loc = "checkAnswer"
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonCheck" to="." method="_on_ButtonCheck_pressed"]
